completing the design

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mude Mart</title>
+		<style>
+			/*body {*/
+			/*	display: flex;*/
+			/*	align-items: center;*/
+			/*	justify-content: center;*/
+			/*	min-height: 100vh;*/
+			/*	width: 2500px;*/
+
+			/*}*/
+			/*body*/
+			/*{*/
+      /*  margin: 0;*/
+      /*  padding: 0;*/
+			/*	*/
+			/*}*/
+		</style>
   </head>
-  <body class="h-full w-full bg-transparent">
+  <body class="  bg-transparent" >
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
