--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			/*}*/
 		</style>
   </head>
-  <body class="  bg-transparent" >
+  <body class="  bg-white" >
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
